[project]
name = "aggify"
version = "0.1.7"
authors = [
  { name="SeYeD.Dev", email="me@seyed.dev" },
]
description = "A MongoDB aggregation generator for Mongoengine"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mongoengine >= 0.27.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
]

[project.urls]
Homepage = "https://github.com/Aggify/aggify"
"Source Code" = "https://github.com/Aggify/aggify"
"Bug Tracker" = "https://github.com/Aggify/aggify/issues"
Documentation = "https://github.com/Aggify/aggify/docs"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
