[tool.poetry]
name = "aggify"
version = "0.3.9"
authors = ["SeYeD.Dev <me@seyed.dev>"]
repository = "https://github.com/Aggify/aggify"
documentation = "https://github.com/Aggify/aggify/docs"


description = "A MongoDB aggregation generator for Mongoengine"
readme = "README.md"
packages = [{ include = "aggify" }]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
mongoengine = ">= 0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = ">=7.2,<9.0"
pytest-cov = "^4.0.0"
mypy = "^1.5.1"
pre-commit = "^3.4.0"
tox = "^4.11.1"

[tool.poetry.group.docs.dependencies]
mkdocs = "^1.4.2"
mkdocs-material = "^9.2.7"
mkdocstrings = { extras = ["python"], version = ">=0.23,<0.25" }

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
